Finally fixed the bug where the background color didn't affect offscreen content

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -11,11 +11,17 @@ html
 
 body
   // background rgba(35,35,35,1)
-  background rgba(35,35,35,0.5)
+  background none
   background-attachment fixed
+  padding-top 50px
+  padding-bottom 50px
+  position absolute
   height 100%
-  padding-top 70px
-  padding-bottom 70px
+  left 0
+  right 0
+  top 0
+  bottom 0
+  overflow auto
 
 .navbar
   height 51px
@@ -48,6 +54,17 @@ body
         span
           float left
           margin-right 4px
+          
+section.content
+  height calc(100% - 102px)
+  overflow-y auto
+  padding-top 21px
+  
+#stage
+  background rgba(35,35,35,0.5)
+  position fixed
+  height 100%
+  width 100%
       
 footer
   padding-left 15px
